--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         この部分はページの本文です
-        <input type="button" value="button" onclick="buttonClick()">
+        <input type="button" value="demo_button" onclick="buttonClick()">
         <script>
             function buttonClick(){
-                krt('send', 'sample', {
+                krt('send', 'demo_button_click', {
                     color: 'red',
                     size: 20,
                     is_empty: false
