--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- End KARTE Tag -->
     </head>
     <body>
-        この部分はページの本文です
+        <h3>KARTE demo</h3>
         <input type="button" value="demo_button" onclick="buttonClick()">
         <script>
             function buttonClick(){
