--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <input type="button" value="demo_button" onclick="buttonClick()">
         <script>
             function buttonClick(){
-                krt('send', 'demo_button_click', {
+                krt('send', 'sample', {
                     color: 'red',
                     size: 20,
                     is_empty: false
